<resources>
    <string name="app_name">Agro Farmers</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="powered_by_comsians">Powered By; COMSIANS</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="show_password">Show Password</string>
    <string name="forgot_password"><u>Forgotten Password?</u></string>
    <string name="new_user">Create new account <u>here!</u></string>
    <string name="already"><u>Already have an account!</u></string>
    <string name="sign_out">Sign Out</string>
    <string name="help">Help</string>
    <string name="nav_open">Navigation Drawer Open</string>
    <string name="nav_close">Navigation Drawer Close</string>
    <string name="name">Name</string>
    <string name="seeds">Seeds</string>
    <string name="fertilizers">Fertilizers</string>
    <string name="pesticides">Pesticides</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="about_us">About us</string>
    <string name="full_name">FULL NAME</string>
    <string name="re_type_password">RE-TYPE PASSWORD</string>
    <string name="password">PASSWORD</string>
    <string name="email">EMAIL</string>
    <string name="register">REGISTER</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
