<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="left"
    tools:showIn="navigation_view">
<group android:checkableBehavior="single">
    <item
        android:title="@string/seeds"
        app:showAsAction="never"
        android:icon="@drawable/ic_seeds"
        android:id="@+id/nav_seeds"
        />
    <item
        android:title="@string/fertilizers"
        app:showAsAction="never"
        android:icon="@drawable/ic_fertilizer"
        android:id="@+id/nav_fertilizer"
        />
    <item
        android:title="@string/pesticides"
        app:showAsAction="never"
        android:icon="@drawable/ic_pesticide"
        android:id="@+id/nav_pesticides"
        />
    </group>
        <item
            android:title="@string/setting"
            app:showAsAction="never"
            android:id="@+id/setting"
            android:icon="@drawable/ic_setting">
        </item>
    <item
        android:title="@string/about_us"
        app:showAsAction="never"
        android:id="@+id/aboutUs"
        android:icon="@drawable/ic_person">
    </item>
        <item
            android:title="@string/logout"
            android:id="@+id/log_out"
            app:showAsAction="never"
            android:icon="@drawable/ic_logout">
        </item>
</menu>